# rusq

./: Cargo.toml  Dockerfile  README.md  compose.yml
.devcontainer/: devcontainer.json
src/: main.rs  routes.rs
src/utils/: config.rs  mod.rs  queue.rs
