[package]
name = "rusq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
clap = { version = "4.1.8", features = ["derive"] }
redis = { version = "0.22.3", features = ["r2d2"] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }

[profile.release]
strip = true
